@@ -1,3 +1,9 @@
+2011-01-25  Robert Larice
+ * src/frontend/Makefile.am ,
+ * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml
+ * src/spicelib/parser/Makefile.am
+   small fixes to make some `Makefiles' ready for build in a separate directory
+
 11-01-18 Holger Vogt
  * plotcurv.c: line 139 test for existance of v_plot before comparing 
   pl_scale
